--- a/CipherConnectPro/res/values/strings.xml
+++ b/CipherConnectPro/res/values/strings.xml
@@ -20,6 +20,7 @@
 	<string name="strLastDevNameTitle">Last Connect:</string>	
 	<string name="ime_setting_name">CipherConnect Pro settings</string>
 	<string name="setting_buildconnect">Connect Bluetooth device</string>
+	<string name="setting_waitconnect">Wait connection</string>
 	<string name="setting_bluetooth_device_status">Bluetooth device status</string>
 	<string name="setting_bluetooth_device_connected">Connected</string>
 	<string name="setting_bluetooth_device_connecting">Connecting&#8230;</string>
