--- a/CipherConnectPro/res/values/strings.xml
+++ b/CipherConnectPro/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="strSetConn">Step2. Set Connection</string>
     <string name="strMacAdd">Step3. MAC Address</string>
     <string name="strBTNoDeviceName">no device</string>
+    <string name="strOneScanTile">One Scan to connect to device</string>
     <string name="strBeginConn">Begin to connect&#8230;</string>
     <string name="strConnected">Connected</string>
     <string name="strConnectErr">Connect error!</string>
