[What]Implement exit

--- a/CipherConnectPro2/res/values/strings.xml
+++ b/CipherConnectPro2/res/values/strings.xml
@@ -122,6 +122,7 @@
 	<string name="str_chooseScanner">Scanner</string>
 	<string name="menu_scan">Search</string>
 	<string name="menu_stop">Stop</string>
+	<string name="menu_exit">Exit</string>
 	<string name="unknown_device">unknown device</string>
 	<string name="none_device">none</string>
 	<string-array name="ScanMode_entries">
