--- a/CipherConnectPro2/res/values/strings.xml
+++ b/CipherConnectPro2/res/values/strings.xml
@@ -138,6 +138,7 @@
 	<!-- Language -->
 	<string-array name="Language_entries">
 		<item>None</item>
+		<item>Simple Chinese</item>
 		<item>Czech</item>
 		<item>French</item>
 		<item>German</item>
@@ -148,6 +149,7 @@
 	</string-array>
 	<string-array name="Language_entries_value">
 		<item>No</item>
+		<item>Sc</item>
 		<item>Cz</item>
 		<item>Fr</item>
 		<item>De</item>
