--- a/CipherConnectPro2/res/values/strings.xml
+++ b/CipherConnectPro2/res/values/strings.xml
@@ -34,14 +34,14 @@
 	<string name="setting_autoconnect">Auto Reconnect</string>
 	<string name="setting_about">About</string>
 	<string name="setting_setinput">Set input method</string>
-	<string name="setting_scanner_config">Configure Bluetooth scanner</string>
+	<string name="setting_scanner_config">Disconnect after swithing to other IM</string>
 	<string name="setting_scanner_config_sum">Configure scanner before using CipherConnectPro2 if any issue occurs during connection.</string>
 	<string name="about_company">Company</string>
 	<string name="about_company_value">CipherLab Co., Ltd.</string>
 	<string name="about_url">Website</string>
 	<string name="about_url_value">http://www.cipherlab.com</string>
 	<string name="about_version">Version</string>
-	<string name="about_version_value">0.0.6</string>
+	<string name="about_version_value">0.0.7</string>
 	<string name="about_sdk">Android SDK</string>
 	<string name="about_sdk_value">5.0.1</string>
 	<string name="config_type_title_1">Connect Type - Pair/Connect</string>
