--- a/CipherConnectPro2/res/values/strings.xml
+++ b/CipherConnectPro2/res/values/strings.xml
@@ -41,7 +41,7 @@
 	<string name="about_url">Website</string>
 	<string name="about_url_value">http://www.cipherlab.com</string>
 	<string name="about_version">Version</string>
-	<string name="about_version_value">0.0.9</string>
+	<string name="about_version_value">0.0.10</string>
 	<string name="about_sdk">Android SDK</string>
 	<string name="about_sdk_value">5.0.1</string>
 	<string name="config_type_title_1">Connect Type - Pair/Connect</string>
@@ -79,7 +79,7 @@
 	<string name="remove_lite_quit_button">Exit</string>
 	<string name="setting_minimum">Enable Minimize keyboard</string>
 	<string name="setting_disconnSwch">Disconnect after switching to user default IM</string>
-	<string name="setting_disconnSwchSum">Disconnect BT connection after switching to user keybaord. This only takes effect during BT connection.</string>
+	<string name="setting_disconnSwchSum">Disconnect BT connection after switching to user keyboard. This only takes effect during BT connection.</string>
 	<string name="Bluetooth_Mode_Title">Classic Bluetooth/Low Energy</string>
 	<string name="Bluetooth_Mode_Summary">Classic </string>
 	<string name="Bluetooth_Mode_BLE_Summary">Low energy</string>
